﻿=== Changelog ===
v6.0.2
  - propably found long time bug for overlayed bag icons
  - reworked interal (debug) logging system
  - reworked caching mechanism for more general use
  - added reagent bank
v6.0.1
  - added file based logging on a per session basis, to enable type the following into the chat:
    /script BaudBag_DebugLog = true;
	The resulting log will be in the SavedVariable file for BaudBag. Beware that the option will reset to false when relogging or reloading the ui! Entries of previous sessions will automatically be overriden!
  - fixed locked bag selection
v6.0.0
  - adapted to braking changes in API & base container addon
v5.4.0
  - added workaround for slider value bug introduced in live 5.4.0 builds (see http://www.wowwiki.com/Patch_5.4.0/API_changes#Issues)
  - fixed blue borders in offline bank view when bank hasn't been visited in a session
v5.3.0
  - fixed search when caged battle pets are present in the bags open for search
  - added new option 
v5.2.0
  - fixed faulty behaviour when BB is deativated for the inventory (Ticket 77)
v5.1.0
  - hotfix for changes made to original BagSlots by Blizz
v5.0.0
  - fixed my sloppy coding resulting in tainting sloppy coded blizzard addons with patch 5.0.4
v4.3.0
  - removed obsolete code to get rid of some error messages
  - fixed up size of Bag Slot Container Frame (thx to KanadiaN for the patch!)
  - finally fixed AutoOpen function for bags when going to a vendor or mail terminal
v4.2.0
  - removed keyring to adapt to the current WoW Interface changes introduced with patch 4.2.0
v4.1.1
  - fixed open bags closing when opening merchant window
  - backpack now opens correctly when all bags are opened even if it is not joined with other bags
  - corrected backpack toggeling to close or open all bags at once instead of opening closed and closing opened bags
  - worked around some tainting issues

v4.1.0
  - adopted Changes for Patch 4.1 (new ToggleAllBags behavior)

v4.0.3