@@ -31,6 +31,7 @@ if (Locale=="zhTW") then -- Translator: Isler
     Of = " 的",
     Inventory = "背包",
     BankBox = "銀行",
+    ReagentBankBox = "銀行",
     BlizInventory = "暴雪背包風格",
     BlizBank = "暴雪銀行風格",
     BlizKeyring = "暴雪鑰匙鏈風格",
@@ -74,6 +75,7 @@ elseif (Locale=="zhCN") then  -- Translator: Isler
     Of = " 的",
     Inventory = "背包",
     BankBox = "银行",
+    ReagentBankBox = "银行",
     BlizInventory = "暴雪背包风格",
     BlizBank = "暴雪银行风格",
     BlizKeyring = "暴雪钥匙链风格",
@@ -116,6 +118,7 @@ elseif (Locale=="frFR") then  -- Translator: Isler
     Of = "'s ",
     Inventory = "votre sac",
     BankBox = "Sac de Banque",
+    ReagentBankBox = "Sac de Banque",
     BlizInventory = "Bliz inventaire",
     BlizBank = "Bliz Banque",
     BlizKeyring = "Bliz clef",
@@ -158,6 +161,7 @@ elseif (Locale == "deDE") then -- Translator: Thurmal
     Of = "s ",
     Inventory = "Inventar",
     BankBox = "Bankfach",
+    ReagentBankBox = "Materiallager",
     BlizInventory = "Bliz Inventar",
     BlizBank = "Bliz Bank",
     BlizKeyring = "Bliz Schlüsselbund",
@@ -200,6 +204,7 @@ elseif (Locale == "koKR") then -- Translator: talkswind
 	Of = "'의 ",
 	Inventory = "소지품",
 	BankBox = "은행 박스",
+    ReagentBankBox = "은행 박스",
 	BlizInventory = "블리즈 소지품",
 	BlizBank = "블리즈 은행",
 	BlizKeyring = "블리즈 열쇠고리",
@@ -242,6 +247,7 @@ elseif (Locale == "ruRU") then -- Translator: StingerSoft
     Of = " ",
     Inventory = "Инвентарь",
     BankBox = "Банк",
+    ReagentBankBox = "Банк",
     BlizInventory = "Bliz инвентарь",
     BlizBank = "Bliz банк",
     BlizKeyring = "Bliz ключи",
@@ -284,6 +290,7 @@ else --enUS (default)
     Of = "'s ",
     Inventory = "Inventory",
     BankBox = "Bank Box",
+    ReagentBankBox = "Reagent Bank",
     BlizInventory = "Bliz Inventory",
     BlizBank = "Bliz Bank",
     BlizKeyring = "Bliz Keyring",
